@@ -1,3 +1,8 @@
 #!/bin/sh
 
-./dfsch-repl $srcdir/scm/test.scm
+BUILD_DIR="`pwd`"
+
+cd $srcdir/scm
+
+$BUILD_DIR/dfsch-repl test.scm
+
